23 Aug 2024 | Creating Basic files and adding examples for testings and config files

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         {
             "format": "piisa:config:pii-extract-plg-transformers:main:v1",
             "task_config": {
-                "cachedir": "/home/user/app/cache",
+                "cachedir": "app/cache",
                 "reuse_engine": true,
                 "aggregation": "max",
                 "models": [
